# toe

./: .gitignore  CONTRIBUTING.md  LICENSE  PAPER.md  README.md  pyproject.toml
.github/workflows/: ci.yml
macdoc/: __main__.py  bench.py  models.py  render.py  schema.py
macdoc/research/: partial_order.py  robustness.py  run_study.py  synth.py
taul/: __main__.py  eval_reading_order.py  models.py  spec_decode.py
tests/: test_pore.py
toe/: __init__.py  __main__.py  extract.py  models.py
toe/research/: __init__.py  metric.py
